Make a user jourrrrrrrrrney

--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
   <body>
   <div class="container">
   	<div class="row content">
-    	<div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+    	<div id="content-block" class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
         <h1 class="text-center text-capitalize title grow">no discernible difference</h1>
         <h2 class="text-center text-capitalize sub-title grow">hdd - ssd</h2>
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=j84eEjP-RL4"></iframe>
+        <p class="text-center"><a class="btn btn-default next-button">#butsurely</a></p>
 </div>
         </div>
   </div>
