--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
   <div class="container">
   	<div class="row content">
-    	<div id="content-block" class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+    	<div id="content-block" class="col-xs-12 col-sm-6 col-sm-offset-3">
         <h1 class="text-center text-capitalize title grow">no discernible difference</h1>
         <h2 class="text-center text-capitalize sub-title grow">hdd - ssd</h2>
         <p class="text-center"><a class="btn btn-default next-button">#butsurely</a></p>
